@@ -1,3 +1,8 @@
+2013-11-24 Riccardo Mottola <rm@gnu.org>
+
+	* GRPathObject.m (copyWithZone)
+	Copy all object's properties.
+
 2013-11-15 Riccardo Mottola <rm@gnu.org>
 
 	* GRBezierControlPoint.m
